peticion de push

--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -81,7 +81,7 @@ body {
 }
 
 .footer {
-	background-image: url('https://static.vix.com/es/sites/default/files/styles/4x3/public/m/matrix-codigo-gif.gif');
+	background-image: url('../src/assets/img/1818_XXL 2.jpg');
 	background-position: center center;
 	background-repeat: no-repeat;
 	width: 100%;
