--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -4,6 +4,39 @@ body {
 	background-blend-mode: unset;
 }
 
+.header {
+	width: 100%;
+	/*min-height: 100vh;*/
+	background-image: url();
+	background-repeat: no-repeat;
+	background-position: center;
+	background-attachment: fixed;
+}
+
+body:before {
+	content: '';
+	width: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	background-image: linear-gradient(rgba(255, 255, 255, 0.1), rgba(34, 40, 49, 1));
+}
+
+.header:before {
+	content: '';
+	width: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	background-image: linear-gradient(rgba(255, 255, 255, 0.1), rgba(34, 40, 49, 1));
+}
+
+.bg-dark {
+	/*position: fixed;
+	z-index: 20;*/
+	width: 100%;
+}
+
 #banner {
 	background-color: gray;
 	margin: 3px 3px 3px 3px;
@@ -90,4 +123,53 @@ body {
 	padding-top: 5em;
 	opacity: 95%;
 	margin-top: 5em;
+}
+
+#contenedor-cards {
+	margin-top: 5em;
+}
+
+.navg a {
+	color: #f4f4f4;
+	font-family: ;
+	font-size: 23px;
+	padding: 10px 15px;
+	text-align: center;
+	text-transform: uppercase;
+}
+
+.navg a:hover {
+	background-color: #c1000ca2;
+}
+
+.text-header {
+	/*min-height: 100vh;*/
+}
+
+.text-header span {
+	font-size: 1.2em;
+	/*letter-spacing: 5px;
+	font-family: 'Anton';*/
+	margin: 0 0 0 5px;
+}
+
+.text-header p {
+	font-size: 1em;
+}
+
+.btn-yo {
+	padding: 7px 12px;
+	color: #f4f4f4;
+	background-color: #c10000e8;
+}
+
+.btn.yo:hover {
+	color: #f4f4f4;
+	background-color: #c1000;
+}
+
+@media (min-width: 768px) {
+	/*.bg-dark {
+		background-color: transparent !important;
+	}*/
 }
