--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -6,11 +6,6 @@ body {
 
 .header {
 	width: 100%;
-	/*min-height: 100vh;*/
-	background-image: url();
-	background-repeat: no-repeat;
-	background-position: center;
-	background-attachment: fixed;
 }
 
 body:before {
@@ -32,8 +27,6 @@ body:before {
 }
 
 .bg-dark {
-	/*position: fixed;
-	z-index: 20;*/
 	width: 100%;
 }
 
@@ -131,7 +124,6 @@ body:before {
 
 .navg a {
 	color: #f4f4f4;
-	font-family: ;
 	font-size: 23px;
 	padding: 10px 15px;
 	text-align: center;
@@ -142,14 +134,8 @@ body:before {
 	background-color: #c1000ca2;
 }
 
-.text-header {
-	/*min-height: 100vh;*/
-}
-
 .text-header span {
 	font-size: 1.2em;
-	/*letter-spacing: 5px;
-	font-family: 'Anton';*/
 	margin: 0 0 0 5px;
 }
 
@@ -181,8 +167,7 @@ body:before {
 	margin-right: auto;
 }
 
-@media (min-width: 768px) {
-	/*.bg-dark {
-		background-color: transparent !important;
-	}*/
+#botones {
+	margin-left: auto;
+	margin-top: 1vh;
 }
